Comment out second set of join / leave buttons on groups

--- a/www/templates/shared/groups/group_detail.html
+++ b/www/templates/shared/groups/group_detail.html
@@ -44,7 +44,7 @@
     </ion-item>
   </ion-list>
 
-  <div class="detailed-group-footer-holder">
+  <!-- <div class="detailed-group-footer-holder">
     <button class="button button-positive" ng-click="joinGroup()" ng-show="!groupHasUser" ng-class="buttonClicked ? 'clicked' : ''">
       Join group
     </button>
@@ -64,5 +64,5 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
