--- a/www/templates/general/groups/detail.html
+++ b/www/templates/general/groups/detail.html
@@ -1,5 +1,5 @@
-<ion-view>
-<ion-nav-title>Details</ion-nav-title>
+<ion-view cache-view="false">
+  <ion-nav-title>Details</ion-nav-title>
   <ion-nav-buttons side="left">
     <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/general/groups/index">Groups</a>
   </ion-nav-buttons>
