--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -88,6 +88,12 @@ a {
 .notification-main-tab .badge {
   opacity: 1 !important; }
 
+.icon-flipped {
+  transform: scaleY(-1);
+  -moz-transform: scaleY(-1);
+  -webkit-transform: scaleY(-1);
+  -ms-transform: scaleY(-1); }
+
 .welcome-page {
   position: relative; }
   .welcome-page .scroll {
