--- a/www/lib/ionic/scss/custom/_main.scss
+++ b/www/lib/ionic/scss/custom/_main.scss
@@ -87,3 +87,10 @@ a {
     opacity: 1 !important;
   }
 }
+
+.icon-flipped {
+  transform: scaleY(-1);
+  -moz-transform: scaleY(-1);
+  -webkit-transform: scaleY(-1);
+  -ms-transform: scaleY(-1);
+}
