Setup view for notification settings

--- a/www/lib/ionic/scss/ionic.scss
+++ b/www/lib/ionic/scss/ionic.scss
@@ -22,6 +22,7 @@
   "custom/general/shift_patterns/shift_patterns_detail",
 
   "custom/notifications/index",
+  "custom/notifications/settings",
 
   "custom/shared/legend",
 
