--- a/www/templates/notifications/index.html
+++ b/www/templates/notifications/index.html
@@ -1,4 +1,7 @@
 <ion-view view-title="Notifications" cache-view="false">
+  <ion-nav-buttons side="right">
+    <a class="button button-icon icon ion-ios-settings" href="#/tab/notifications/settings"></a>
+  </ion-nav-buttons>
   <div class="row loader-holder">
     <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
   </div>
