--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -392,6 +392,12 @@ form .sign-up-radio {
 .notifications-list .item.not-read {
   background-color: #f6f7f8; }
 
+.notification-settings-list p {
+  white-space: normal !important; }
+
+.notification-settings-list .toggle {
+  top: 16px !important; }
+
 .close-legend-modal-button {
   border: none !important; }
 
