--- a/www/templates/general/index.html
+++ b/www/templates/general/index.html
@@ -15,6 +15,12 @@
         <i class="icon ion-chevron-right icon-accessory"></i>
       </a>
 
+      <a class="item item-icon-left item-icon-right" href="#/tab/notifications/settings">
+        <i class="icon ion-ios-settings"></i>
+        Notification Settings
+        <i class="icon ion-chevron-right icon-accessory"></i>
+      </a>
+
       <a class="item item-icon-left item-icon-right" href="#/tab/general/account/detail">
         <i class="icon ion-person"></i>
         Account
