--- a/www/templates/notifications/settings.html
+++ b/www/templates/notifications/settings.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Notifications" cache-view="false">
   <ion-nav-buttons side="left">
-    <a class="button button-icon icon ion-ios-arrow-back" ng-click="goBack()">Back</a>
+    <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/notifications/index">Back</a>
   </ion-nav-buttons>
   <div class="row loader-holder">
     <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
