--- a/www/templates/general/index.html
+++ b/www/templates/general/index.html
@@ -1,6 +1,6 @@
 <ion-view view-title="General" cache-view="false">
   <ion-content>
-    <notification ng-model="message" ng-show="message"></notification>
+    <notification ng-model="message" class="ng-hide" ng-show="message"></notification>
     <div class="list">
 
       <a class="item item-icon-left item-icon-right" href="#/tab/general/groups/index">
