--- a/www/templates/general/shift_patterns/detail.html
+++ b/www/templates/general/shift_patterns/detail.html
@@ -16,15 +16,15 @@
               <label>
                 <input class="shift-name-input" type="text" placeholder="E.g. Day Shift" ng-model="shiftPatternName">
               </label>
-              <span class="input-label assertive" ng-show="inputError">Please fill in</span>
+              <span class="input-label assertive ng-hide" ng-show="inputError">Please fill in</span>
             </div>
             <div class="col col-33">
               <span class="input-label">Abbreviation:</span>
               <label>
                 <input class="shift-name-input" type="text" placeholder="E.g. Dx" ng-model="abbreviation">
               </label>
-              <span class="input-label assertive" ng-show="abbInputError">Please fill in</span>
-              <span class="input-label assertive" ng-show="lengthError">3 letters max</span>
+              <span class="input-label assertive ng-hide" ng-show="abbInputError">Please fill in</span>
+              <span class="input-label assertive ng-hide" ng-show="lengthError">3 letters max</span>
             </div>
           </div>
         </label>
@@ -33,7 +33,7 @@
       <ion-toggle ng-model="shiftPattern.swappable" ng-checked="shiftPattern.swappable" toggle-class="toggle-positive">Swappable shift?</ion-toggle>
       <ion-toggle ng-model="shiftPattern.entireDay" ng-checked="shiftPattern.entireDay" toggle-class="toggle-positive">Entire day?</ion-toggle>
 
-      <div class="time-section-holder" ng-show="!shiftPattern.entireDay">
+      <div class="time-section-holder ng-hide" ng-show="!shiftPattern.entireDay">
         <div class="row">
           <div class="col">
             <p>
@@ -58,7 +58,7 @@
           <div class="col">
             <p>
               End time:
-              <span ng-show="nextDayEnd">
+              <span class="ng-hide" ng-show="nextDayEnd">
                 *
               </span>
             </p>
@@ -76,7 +76,7 @@
                 <i class="icon ion-arrow-down-b down-minute-icon end" ng-click="downMinute($event)"></i>
               </div>
             </div>
-            <div ng-show="nextDayEnd">
+            <div class="ng-hide" ng-show="nextDayEnd">
               * Ends the next day
             </div>
           </div>
@@ -88,7 +88,7 @@
           <button class="button button-positive" ng-click="saveShiftPattern(shiftPatternName, abbreviation)" ng-disabled="buttonClicked">
             {{actionButtonText}}
           </button>
-          <ion-spinner icon="lines" class="join-leave-loader" ng-show="buttonClicked"></ion-spinner>
+          <ion-spinner icon="lines" class="join-leave-loader ng-hide" ng-show="buttonClicked"></ion-spinner>
           <div class="delete-link">
             <a class="assertive" ng-click="deleteShiftPattern()">
               Delete
