--- a/www/templates/initial/groups.html
+++ b/www/templates/initial/groups.html
@@ -3,7 +3,7 @@
     <a class="button button-clear button-white" href="#/initial/groups-new">Add</a>
   </ion-nav-buttons>
   <div class="row loader-holder">
-    <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
+    <ion-spinner class="actual-loader spinner-positive ng-hide" icon="lines" ng-show="loader"></ion-spinner>
   </div>
   <ion-content>
     <div class="group-top-info">
