--- a/www/templates/swaps/offered-swap-detail.html
+++ b/www/templates/swaps/offered-swap-detail.html
@@ -7,10 +7,10 @@
     <a class="button button-icon icon ion-chatbox" href="#/tab/swaps/comments/{{shift.id}}"> {{shift.comments.length}}</a>
   </ion-nav-buttons>
   <div class="row loader-holder">
-    <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
+    <ion-spinner class="actual-loader spinner-positive ng-hide" icon="lines" ng-show="loader"></ion-spinner>
   </div>
   <ion-content>
-    <div class="swap-own-detail-holder" ng-show="!loader">
+    <div class="swap-own-detail-holder ng-hide" ng-show="!loader">
       <p>
         <b class="date-title">
           <i class="icon ion-star"></i>
@@ -57,7 +57,7 @@
       </div>
 
     </div>
-    <div class="list" ng-show="!loader" ng-if="shift.swaps && shift.swaps.length > 0">
+    <div class="list ng-hide" ng-show="!loader" ng-if="shift.swaps && shift.swaps.length > 0">
 
       <div ng-controller="CalendarCtrl" class="calender-display">
         <div class="calendar-holder" ng-if="calendarObjects">
