--- a/www/templates/calendar/index.html
+++ b/www/templates/calendar/index.html
@@ -3,10 +3,10 @@
     <a class="button button-icon icon ion-ios-information-outline" ng-click="openLengendModal()"></a>
   </ion-nav-buttons>
   <div class="row loader-holder">
-    <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
+    <ion-spinner class="actual-loader spinner-positive ng-hide" icon="lines" ng-show="loader"></ion-spinner>
   </div>
   <ion-content>
-    <div ng-controller="CalendarCtrl" class="calender-display">
+    <div ng-controller="CalendarCtrl" class="calender-display ng-hide" ng-show="!loader">
       <div class="calendar-holder" ng-if="calendarObjects">
         <ion-slide-box show-pager="false" auto-play="false" active-slide="3" on-slide-changed="highlightACell()">
           <ion-slide ng-repeat="month in calendarObjects">
@@ -52,7 +52,7 @@
     </div>
 
 
-    <div class="shifts-input input-tab-contents" ng-controller="ShiftsInputCtrl" ng-show="!loader">
+    <div class="shifts-input input-tab-contents ng-hide" ng-controller="ShiftsInputCtrl" ng-show="!loader">
       <div class="notes-display">
         <div class="actual-note"></div>
       </div>
