--- a/www/templates/general/groups/index.html
+++ b/www/templates/general/groups/index.html
@@ -6,7 +6,7 @@
     <a class="button button-clear button-white" href="#/tab/general/groups/create">Add</a>
   </ion-nav-buttons>
   <div class="row loader-holder">
-    <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
+    <ion-spinner class="actual-loader spinner-positive ng-hide" icon="lines" ng-show="loader"></ion-spinner>
   </div>
   <ion-content>
     <group-list></group-list>
