--- a/www/templates/general/shift_patterns/index.html
+++ b/www/templates/general/shift_patterns/index.html
@@ -3,11 +3,11 @@
     <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/general/index">General</a>
   </ion-nav-buttons>
   <div class="row loader-holder">
-    <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
+    <ion-spinner class="actual-loader spinner-positive ng-hide" icon="lines" ng-show="loader"></ion-spinner>
   </div>
   <ion-content>
     <div class="shifts-patterns patterns-tab-contents">
-      <notification ng-model="message" ng-show="message"></notification>
+      <notification ng-model="message" class="ng-hide" ng-show="message"></notification>
       <div class="list">
         <ion-list ng-repeat="group in groupsWithShiftTypes">
           <div class="item item-divider shift-pattern-group">
