--- a/www/templates/initial/groups_detail.html
+++ b/www/templates/initial/groups_detail.html
@@ -4,7 +4,7 @@
     <a class="button button-icon icon ion-ios-arrow-back" href="#/initial/groups">Groups</a>
   </ion-nav-buttons>
   <div class="row loader-holder">
-    <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
+    <ion-spinner class="actual-loader spinner-positive ng-hide" icon="lines" ng-show="loader"></ion-spinner>
   </div>
   <ion-content>
     <group-detail></group-detail>
