--- a/www/templates/shared/groups/group_list.html
+++ b/www/templates/shared/groups/group_list.html
@@ -1,4 +1,4 @@
-<notification ng-model="message" ng-show="message"></notification>
+<notification ng-model="message" class="ng-hide" ng-show="message"></notification>
 <ion-list>
   <ion-item ng-repeat="group in groups" class="item-icon-right" type="item-text-wrap" href="{{detailLinkRoot}}{{group.id}}">
     {{group.name}}
