--- a/www/templates/swaps/edit-offer.html
+++ b/www/templates/swaps/edit-offer.html
@@ -1,13 +1,13 @@
 <ion-view cache-view="false">
   <div class="row loader-holder">
-    <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
+    <ion-spinner class="actual-loader spinner-positive ng-hide" icon="lines" ng-show="loader"></ion-spinner>
   </div>
   <ion-nav-title>Offer</ion-nav-title>
   <ion-nav-buttons side="left">
     <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/swaps/offered/{{swapId}}" ng-click="clearHistory()">Back</a>
   </ion-nav-buttons>
   <ion-content>
-    <div class="top-instructions" ng-if="shift_up_for_swap" ng-show="!loader">
+    <div class="top-instructions ng-hide" ng-if="shift_up_for_swap" ng-show="!loader">
       <div>
         <b>
           <i class="icon ion-star"></i>
@@ -22,7 +22,7 @@
       </div>
     </div>
 
-    <div ng-controller="CalendarCtrl" class="calender-display" ng-show="!loader">
+    <div ng-controller="CalendarCtrl" class="calender-display ng-hide" ng-show="!loader">
       <div class="calendar-holder" ng-if="calendarObjects">
         <ion-slide-box show-pager="false" auto-play="false" active-slide="3">
           <ion-slide ng-repeat="month in calendarObjects">
@@ -67,7 +67,7 @@
       </div>
     </div>
 
-    <div class="bottom-note" ng-show="!loader">
+    <div class="bottom-note ng-hide" ng-show="!loader">
       <div>
         <button class="button button-positive" ng-click="updateSwap()">
           Update Offers
