Specified page that star has to be found on

--- a/www/templates/swaps/new-offer.html
+++ b/www/templates/swaps/new-offer.html
@@ -1,4 +1,4 @@
-<ion-view cache-view="false">
+<ion-view cache-view="false" class="new-offer-page">
   <div class="row loader-holder">
     <ion-spinner class="actual-loader spinner-positive ng-hide" icon="lines" ng-show="loader"></ion-spinner>
   </div>
