--- a/www/templates/swaps/offered-swap-detail.html
+++ b/www/templates/swaps/offered-swap-detail.html
@@ -1,4 +1,4 @@
-<ion-view cache-view="false">
+<ion-view cache-view="false" class="offered-detail-page">
   <ion-nav-title></ion-nav-title>
   <ion-nav-buttons side="left">
     <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/swaps/index" ng-click="clearHistory()">Swaps Offered</a>
