--- a/www/templates/swaps/own-detail.html
+++ b/www/templates/swaps/own-detail.html
@@ -1,5 +1,5 @@
-<ion-view cache-view="false">
-<ion-nav-title></ion-nav-title>
+<ion-view cache-view="false" class="own-detail-page">
+  <ion-nav-title></ion-nav-title>
   <ion-nav-buttons side="left">
     <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/swaps/index" ng-click="clearHistory()">My Swaps</a>
   </ion-nav-buttons>
