--- a/www/templates/swaps/up-for-grabs-list.html
+++ b/www/templates/swaps/up-for-grabs-list.html
@@ -1,5 +1,5 @@
 <ion-view cache-view="false">
-  <ion-nav-title>Date</ion-nav-title>
+  <ion-nav-title>Available</ion-nav-title>
   <ion-nav-buttons side="left">
     <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/swaps/index" ng-click="clearHistory()">Back</a>
   </ion-nav-buttons>
