--- a/www/templates/swaps/index.html
+++ b/www/templates/swaps/index.html
@@ -198,9 +198,9 @@
                   </div>
                   <div class="dates">
                     <div class="row" ng-repeat="row in month.rows">
-                      <div class="col date-col" ng-repeat="date in row" ng-class="{'not-current-month': !date.isInCurrentMonth, 'swap': date.shift.swap}">
-                        <div class="date-number">
-                          {{date.dayNum}}
+                      <div class="col date-col" ng-repeat="date in row" ng-class="{'not-current-month': !date.isInCurrentMonth, 'swap': date.shift.swap}" data-holiday="{{date.holiday}}">
+                        <div class="date-number" ng-class="{'holiday': date.holiday}">
+                          {{date.dayNum}}<span ng-if="date.holiday">*</span>
                         </div>
                         <div class="content-text">
                           <div ng-if="date.shift">
