--- a/www/templates/swaps/own-detail.html
+++ b/www/templates/swaps/own-detail.html
@@ -92,9 +92,9 @@
               </div>
               <div class="dates">
                 <div class="row" ng-repeat="row in month.rows">
-                  <div class="col date-col" ng-repeat="date in row" ng-class="{'not-current-month': !date.isInCurrentMonth, 'swap': date.shift.swap}" data-date="{{date.dayNum}}-{{date.month}}-{{date.year}}">
-                    <div class="date-number">
-                      {{date.dayNum}}
+                  <div class="col date-col" ng-repeat="date in row" ng-class="{'not-current-month': !date.isInCurrentMonth, 'swap': date.shift.swap}" data-date="{{date.dayNum}}-{{date.month}}-{{date.year}}" data-holiday="{{date.holiday}}">
+                    <div class="date-number" ng-class="{'holiday': date.holiday}">
+                      {{date.dayNum}}<span ng-if="date.holiday">*</span>
                     </div>
                     <div class="content-text">
                       <div ng-if="date.shift">
