Update wording on notification settings

--- a/www/templates/notifications/settings.html
+++ b/www/templates/notifications/settings.html
@@ -68,7 +68,7 @@
             Swap rescinded
           </h2>
           <p>
-            Someone took back his / her offer to swap with you
+            Someone took back all of his / her offers to swap with one of your shifts
           </p>
         </ion-toggle>
 
